macking project with html,css,javascript

--- a/style.css
+++ b/style.css
@@ -21,6 +21,16 @@ body{
     color:white;
  }
 
+ nav ul li{
+   padding: 0 12px;
+ }
  .brand img{
     width: 44px;
+    padding: 0 8px;
+ }
+ .brand{
+   display: flex;
+   align-items: center;
+   font-weight:bolder ;
+   font-size: 1.3rem;
  }
