--- a/style.css
+++ b/style.css
@@ -34,3 +34,17 @@ body{
    font-weight:bolder ;
    font-size: 1.3rem;
  }
+
+ .container{
+   main-height: 75vh;
+ }
+
+ .bottom{
+   position: sticky;
+   height: 80px;
+   background-color: black;
+ }
+ my progress bar{
+   width: 80vw;
+   text-align: center;
+ }
