macking project with html,css,javascript

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body{
    position: sticky;
    height: 80px;
    background-color: black;
+   bottom: 0;
+   display: flex;
+   justify-content:center;
+   align-items: center;
  }
  my progress bar{
    width: 80vw;
