--- a/style.css
+++ b/style.css
@@ -78,8 +78,16 @@ body{
   width: 80px;
   color: black;
   margin: 12px 0;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 34px;
  }
 
  .songitem img{
-
+  width: 43px;
+  margin: 0 34px;
+ }
+ .timestamp{
+  margin: 1 23px;
+  cursor: pointer;
  }
