--- a/style.css
+++ b/style.css
@@ -91,3 +91,22 @@ body{
   margin: 1 23px;
   cursor: pointer;
  }
+ body{
+    background-color: antiquewhite;
+
+}
+
+ *{
+    margin: 0;
+    padding: 0;
+ }
+ nav{
+    font-family:'ubuntu',sans-serif;
+ }
+ nav ul{
+    display:flex;
+    align-items: center;
+    list-style-type: none;
+    height: 65px;
+    background-color: black;
+    color:white;
