--- a/web.css
+++ b/web.css
@@ -17,8 +17,20 @@
     margin: 0 auto;
 }
 .top_section{
+    margin-top: 100px;
     display: flex;
     justify-content: space-between;
+}
+.top_section h1{
+    font-size: 60px;
+    font-weight: bold;
+    color: rgb(5, 27, 49);
+    text-transform: uppercase;
+}
+
+.image_container{
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .image_container
