make project with html,css,java script

--- a/web.css
+++ b/web.css
@@ -45,4 +45,13 @@ img {
     margin-top: 50px;
 }
 .about_section h2{
+    font_size: 70px;
+    font-weight: 400;
+    margin-bottom: 20px;
+
+}
+.about_section p{
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 1.2px;
 }
