--- a/web.css
+++ b/web.css
@@ -55,3 +55,15 @@ img {
     line-height: 30px;
     letter-spacing: 1.2px;
 }
+.biography_section{
+    margin: 50px 0;
+}
+.biography_section h3{
+    margin-bottom: 20px;
+}
+.biography_section ul{
+    margin-left: 50px;
+}
+.biography_section li{
+    margin-bottom: 15px;
+}
