make project with html,css,java script

--- a/web.css
+++ b/web.css
@@ -54,6 +54,7 @@ img {
     font-size: 20px;
     line-height: 30px;
     letter-spacing: 1.2px;
+    text-align: justify;
 }
 .biography_section{
     margin: 50px 0;
@@ -66,4 +67,10 @@ img {
 }
 .biography_section li{
     margin-bottom: 15px;
+}
+footer{
+    margin: 50px 0;
+}
+footer p{
+    text-align: and;
 }
