--- a/website.css
+++ b/website.css
@@ -65,3 +65,22 @@
 }
 
 
+
+.content {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.top_section {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.top_section h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color: rgb(5, 27, 49);
+    text-transform: uppercase;
+}
