make project with html,css,java script

--- a/style.css
+++ b/style.css
@@ -131,3 +131,19 @@ body{
     color:white;
     
     
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    background-color: darkgray;
+    min-height: 100vh;
+    border: 10px solid black; /* Fixed border syntax */
+}
+
+.content {
+    max-width: 900px;
+    margin: 0 auto;
+}
