make project with html,css,java script

--- a/style.css
+++ b/style.css
@@ -147,3 +147,24 @@ body{
     max-width: 900px;
     margin: 0 auto;
 }
+body{
+    background-color: antiquewhite;
+
+}
+
+ *{
+    margin: 0;
+    padding: 0;
+ }
+ nav{
+    font-family:'ubuntu',sans-serif;
+ }
+ nav ul{
+    display:flex;
+    align-items: center;
+    list-style-type: none;
+    height: 65px;
+    background-color: black;
+    color:white;
+ }
+
