--- a/style.css
+++ b/style.css
@@ -168,3 +168,26 @@ body{
     color:white;
  }
 
+
+ .image_container {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 300px; /* Added px */
+    height: 325px; /* Added px */
+}
+
+.image_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Keeps image proportional and fills container */
+}
+
+.about_section {
+    margin-top: 50px;
+}
+
+.about_section h2 {
+    font-size: 70px; /* Fixed property name */
+    font-weight: 400;
+    margin-bottom: 20px;
+}
