--- a/job_application.css
+++ b/job_application.css
@@ -25,3 +25,13 @@ background-color: gray;
 .title_small{
     font-size: 20px;
 }
+
+.form_container{
+    display: grid;
+    grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+    gap: 20px;
+}
+.form_control{
+    display: flex;
+    flex-direction: column;
+}
