--- a/job_application.css
+++ b/job_application.css
@@ -27,6 +27,7 @@ background-color: gray;
 }
 
 .form_container{
+    margin-top: 20px;
     display: grid;
     grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
     gap: 20px;
@@ -34,4 +35,15 @@ background-color: gray;
 .form_control{
     display: flex;
     flex-direction: column;
+}
+
+label{
+    font-size: 15px;
+}
+
+input , select ,textarea{
+    padding: 6px 10px;
+    border: 1px solid;
+    border-radius: 4px;
+    font-size: 15px+;
 }
