make project with html,css,java script

--- a/website.css
+++ b/website.css
@@ -34,28 +34,7 @@
     text-align: end;
 }
 
-.image_container {
-    border-radius: 50%;
-    overflow: hidden;
-    width: 300px; /* Added px */
-    height: 325px; /* Added px */
-}
 
-.image_container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Keeps image proportional and fills container */
-}
-
-.about_section {
-    margin-top: 50px;
-}
-
-.about_section h2 {
-    font-size: 70px; /* Fixed property name */
-    font-weight: 400;
-    margin-bottom: 20px;
-}
 
 .about_section p {
     font-size: 20px;
@@ -83,4 +62,17 @@
     font-weight: bold;
     color: rgb(5, 27, 49);
     text-transform: uppercase;
+}
+
+.apply_box{
+    max-width: 600px;
+    padding: 20px;
+    background-color: azure;
+    margin: 0px auto;
+    margin-top: 50px;
+    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.1) ;
+    border-radius: 10px;
+}
+.title_small{
+    font-size: 20px;
 }
