--- a/website.css
+++ b/website.css
@@ -76,3 +76,18 @@
 .title_small{
     font-size: 20px;
 }
+
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+background-color: gray;
+}
+
+.container{
+    max-width: 900px;
+    margin: 0 auto;
+}
