make project with html,css,java script

--- a/job_application.css
+++ b/job_application.css
@@ -55,4 +55,13 @@ input:focus{
 .button_container {
     display: flex;
     justify-content: flex-end;
+    margin-top: 20px;
+
+}
+button{
+    background-color: red;
+    border: transparent solid 2px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 8px;
 }
