--- a/job_application.css
+++ b/job_application.css
@@ -57,16 +57,21 @@ input:focus{
     justify-content: flex-end;
     margin-top: 20px;
 
-/* }
-button{
+}
+/* button{
     background-color: red;
     border: transparent solid 2px;
     padding: 5px 10px;
     color: white;
     border-radius: 8px;
 } */
-
-}
+ /* button{
+    background-color: red;
+    border: transparent solid 2px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 8px; */
+/* } */
 button{
     background-color: red;
     border: transparent solid 2px;
