make project with html,css,java script

--- a/website.css
+++ b/website.css
@@ -114,6 +114,21 @@ input:focus{
     color: white;
     border-radius: 8px;
 } */
+ /* button{
+    background-color: red;
+    border: transparent solid 2px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 8px; */
+/* } */
+
+ button{
+    background-color: red;
+    border: transparent solid 2px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 8px; */
+/* }
  button{
     background-color: red;
     border: transparent solid 2px;
