--- a/job_application.css
+++ b/job_application.css
@@ -58,24 +58,32 @@ input:focus{
     margin-top: 20px;
 
 }
-/* button{
-    background-color: red;
-    border: transparent solid 2px;
-    padding: 5px 10px;
-    color: white;
-    border-radius: 8px;
-} */
- /* button{
-    background-color: red;
-    border: transparent solid 2px;
-    padding: 5px 10px;
-    color: white;
-    border-radius: 8px; */
-/* } */
+
 button{
     background-color: red;
     border: transparent solid 2px;
     padding: 5px 10px;
     color: white;
     border-radius: 8px;
+    transition: 0.3 ease-in;
+}
+
+button:hover{
+    background-color: #ccc;
+    border: 2px solid red;
+    color: black;
+    transition: 0.3 ease-out;
+    cursor:pointer;
+}
+.textarea_control{
+    grid-column: 1 /spam 2;
+}
+.textarea_control textarea {
+    width: 100%;
+}
+
+@media (max-width:460px) {
+    .textarea_control{
+    grid-column: 1 /spam 2;
+}
 }
