--- a/job_application.css
+++ b/job_application.css
@@ -1,89 +1,93 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
-background-color: gray;
+body {
+    background-color: gray;
 }
 
-.container{
+.container {
     max-width: 900px;
     margin: 0 auto;
 }
 
-.apply_box{
+.apply_box {
     max-width: 600px;
     padding: 20px;
     background-color: azure;
-    margin: 0px auto;
+    margin: 0 auto;
     margin-top: 50px;
-    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.1) ;
+    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.1);
     border-radius: 10px;
 }
-.title_small{
+
+.title_small {
     font-size: 20px;
 }
 
-.form_container{
+.form_container {
     margin-top: 20px;
     display: grid;
-    grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
 }
-.form_control{
+
+.form_control {
     display: flex;
     flex-direction: column;
 }
 
-label{
+label {
     font-size: 15px;
     margin-bottom: 50px;
 }
 
-input , select ,textarea{
+input, select, textarea {
     padding: 6px 10px;
     border: 1px solid;
     border-radius: 4px;
-    font-size: 15px+;
+    font-size: 15px;
 }
 
-input:focus{
+input:focus {
     outline-color: red;
 }
+
 .button_container {
     display: flex;
     justify-content: flex-end;
     margin-top: 20px;
-
 }
 
-button{
+button {
     background-color: red;
     border: transparent solid 2px;
     padding: 5px 10px;
     color: white;
     border-radius: 8px;
-    transition: 0.3 ease-in;
+    transition: all 0.3s ease-in;
 }
 
-button:hover{
+button:hover {
     background-color: #ccc;
     border: 2px solid red;
     color: black;
-    transition: 0.3 ease-out;
-    cursor:pointer;
+    transition: all 0.3s ease-out;
+    cursor: pointer;
 }
-.textarea_control{
-    grid-column: 1 /spam 2;
+
+.textarea_control {
+    grid-column: 1 / span 2;
 }
+
 .textarea_control textarea {
     width: 100%;
 }
 
-@media (max-width:460px) {
-    .textarea_control{
-    grid-column: 1 /spam 2;
-}
+@media (max-width: 460px) {
+    .textarea_control {
+        grid-column: 1 / span 1;
+    }
 }
